feat(data-service): enrich access overview